--- a/src/pages/dropdown.module.css
+++ b/src/pages/dropdown.module.css
@@ -1,135 +1,59 @@
-.btn-101,
-.btn-101 *,
-.btn-101 :after,
-.btn-101 :before,
-.btn-101:after,
-.btn-101:before {
-  border: 0 solid;
-  box-sizing: border-box;
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-right: 1rem;
 }
-.btn-101 {
-  -webkit-tap-highlight-color: transparent;
-  background-color: #000;
-  background-image: none;
-  color: #fff;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
-    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-  font-size: 100%;
-  font-weight: 900;
-  line-height: 1.5;
-  margin: 0;
-  padding: 0;
-  text-transform: uppercase;
+
+.dropdown button {
+  display: inline-flex;
+  align-items: center;
+  background: var(--bg-color);
+  border: 1px solid #ccc;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  color: white;
 }
-.btn-101:disabled {
-  cursor: default;
-}
-.btn-101:-moz-focusring {
-  outline: auto;
-}
-.btn-101 svg {
+
+.dropdown button:after {
+  content: '';
+  display: inline-block;
+  margin-left: 0.5rem;
+  width: 0;
+  height: 0;
+  border: 5px solid transparent;
+  border-top-color: var(--bg-color);
   vertical-align: middle;
 }
-.btn-101 [hidden] {
-  display: none;
-}
-.btn-101 {
-  --thickness: 0.3rem;
-  /* --roundness: 1.2rem; */
-  --color: #eff6ff;
-  --opacity: 0.6;
-  -webkit-backdrop-filter: blur(100px);
-  backdrop-filter: blur(100px);
-  background: none;
-  background: hsla(0, 0%, 100%, 0.2);
-  border: none;
-  /* border-radius: var(--roundness); */
-  color: var(--color);
-  cursor: pointer;
-  display: block;
-  font-family: Poppins, "sans-serif";
-  font-size: 1rem;
-  font-weight: 500;
-  padding: 0.8rem 3rem;
-  position: relative;
-}
-.btn-101:hover {
-  background: hsla(0, 0%, 100%, 0.3);
-  filter: brightness(1.2);
-}
-.btn-101:active {
-  --opacity: 0;
-  background: hsla(0, 0%, 100%, 0.1);
-}
-.btn-101 svg {
-  /* border-radius: var(--roundness); */
-  display: block;
-  filter: url(#glow);
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-.btn-101 rect {
-  fill: none;
-  stroke: var(--color);
-  stroke-width: var(--thickness);
-  stroke-linejoin: round;
-  stroke-dasharray: 185%;
-  stroke-dashoffset: 80;
-  -webkit-animation: snake 2s linear infinite;
-  animation: snake 2s linear infinite;
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-  height: 100%;
-  opacity: 0;
-  transition: opacity 0.2s;
-  width: 100%;
-}
-.btn-101:hover rect {
-  -webkit-animation-play-state: running;
-  animation-play-state: running;
-  opacity: var(--opacity);
-}
-@-webkit-keyframes snake {
-  to {
-    stroke-dashoffset: 370%;
-  }
-}
-@keyframes snake {
-  to {
-    stroke-dashoffset: 370%;
-  }
-}
 
-.dropdown {
-  margin-left: auto;
-  display: block;
+.dropdown ul {
   position: absolute;
-  background-color: var(--bg-color);
   top: 100%;
   left: 0;
-  color: white;
-  padding: 0;
+  z-index: 1;
+  display: none;
+  min-width: 10rem;
+  padding: 0.5rem 0;
   margin: 0;
-  z-index: 9999;
-  cursor: pointer;
-  border: solid 1px #d42496;
-  width: 100%;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-top: none;
+  border-radius: 0 0 4px 4px;
 }
 
-.dropdown-item {
+.dropdown ul li {
   list-style: none;
-  color: white;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0.5rem;
+  padding: 0.5rem 1rem;
   cursor: pointer;
-  transition: background-color 0.2s;
+  font-size: 1rem;
+  color: var(--bg-color);
 }
 
-.dropdown-item.hovered {
-  background-color: rgb(1, 1, 98);
+.dropdown ul li:hover {
+  background: #f2f2f2;
+}
+
+.dropdown:hover ul {
+  display: block;
 }
