--- a/src/pages/dataGrid.module.css
+++ b/src/pages/dataGrid.module.css
@@ -18,6 +18,12 @@
     padding: 2px 4px;
   }
 
+  .dataGridtd {
+    border-bottom: 1px solid lightgray;
+    border-right: 1px solid lightgray;
+    padding: 2px 4px;
+  }
+
   .dataGridtfoot {
     display: none;
   }
