--- a/src/pages/dataGrid.module.css
+++ b/src/pages/dataGrid.module.css
@@ -16,6 +16,7 @@
   border-bottom: 1px solid lightgray;
   border-right: 1px solid lightgray;
   padding: 2px 4px;
+  white-space: nowrap;
 }
 
 .dataGridtd {
@@ -37,10 +38,13 @@
   -webkit-user-select: all;
   user-select: all;
   z-index: 1000;
-  border-style: 1px solid blue;
 }
 
 .columndivider.hover {
   border-style: 1px solid blue;
   cursor: col-resize;
+}
+
+.gridjs-tr:hover {
+  background-color: #f67adf !important;
 }
