--- a/src/pages/register.module.css
+++ b/src/pages/register.module.css
@@ -5,6 +5,9 @@
     flex-direction: column;
     align-items: center;
     color: white;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
   }
 
   .register-form label,
@@ -14,6 +17,9 @@
   .register-form input[type="submit"] {
     display: block;
     margin-bottom: 10px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
   }
 
   .register-form input[type="text"] {
@@ -22,6 +28,8 @@
     border-radius: 5px;
     outline: none;
     border: none;
+    background-color: blue;
+    color: white;
   }
 
   .register-form input[type="email"] {
@@ -30,6 +38,7 @@
     border-radius: 5px;
     outline: none;
     border: none;
+    background-color: blue;
   }
 
   .register-form input[type="password"] {
@@ -38,6 +47,10 @@
     border-radius: 5px;
     outline: none;
     border: none;
+    background-color: blue;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
   }
 
   .register-form input[type="submit"] {
@@ -47,6 +60,8 @@
     border: none;
     border-radius: 3px;
     width: 10rem;
+    background-color: green;
+    cursor: pointer;
   }
 
   .h2 {
