--- a/src/pages/pagination.module.css
+++ b/src/pages/pagination.module.css
@@ -1,10 +1,9 @@
 .pagination {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    position: relative;
-    width: 100vw;
-    padding-top: 0.5vh;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
   }
 
   .pagination a,
