--- a/src/pages/dataGrid.module.css
+++ b/src/pages/dataGrid.module.css
@@ -22,6 +22,8 @@
   white-space: nowrap;
   min-width: 1px;
   cursor: pointer;
+  user-select: none;
+  padding-right: 10px;
 }
 
 .dataGridtd {
@@ -46,8 +48,6 @@
   -webkit-user-select: all;
   user-select: all;
   z-index: 1000;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 .columndivider:hover {
@@ -62,6 +62,4 @@
 }
 .material-symbols-outlined {
   float: right;
-  padding-left: 10px;
-  margin-left: 10px;
 }
