--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -85,3 +85,10 @@
     padding: 0.5rem 1rem;
     transition: all 0.2s ease-in-out;
   }
+
+  th>span.material-symbol-outlined {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    overflow: hidden;
+  }
