--- a/src/pages/TopBar.module.css
+++ b/src/pages/TopBar.module.css
@@ -1,10 +1,16 @@
 .topbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  background-color: #0d1117;
+  color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--bg-color);
-  height: 60px;
   padding: 0 20px;
+  z-index: 1;
 }
 
 .linksContainer {
