--- a/src/pages/pagination.module.css
+++ b/src/pages/pagination.module.css
@@ -12,7 +12,7 @@
     margin: 0 8px;
     font-size: 16px;
     text-decoration: none;
-    /* color: #333; */
+    /* color: #0d1117; */
   }
 
   .pagination .active {
