--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,12 @@
     box-sizing: border-box;
     color: white;
   }
-
+:root {
+  --sb-bgc: #0d1117;
+  --tb-bgc: #072f6a;
+  --tb-height: 50px;
+  --sb-width: 25vw;
+}
   html {
     font-family: sans-serif;
     font-size: 14px;
