--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -30,6 +30,7 @@
     padding: 20px;
     z-index: 2;
     overflow-y: auto;
+    overflow-x: hidden;
   }
 
   .sidebar-ul {
@@ -67,16 +68,18 @@
     transform: translateX(-250px);
   }
 
-  .expandButton {
-    /* position: absolute; */
-    margin-left:  10vw;
-    top: calc(var(--tb-height) * 0.1);
-    background-color: #dc2f09;
+  .customExpandButton {
+    background-color: transparent;
     border: none;
+    margin-left: 10px;
+    margin-top: 10px;
     cursor: pointer;
-    transition: background-color 0.3s ease-out;
-    z-index: 3;
+
+    &:hover {
+      background-color: #f5f5f5;
+    }
   }
+
 
   .expandButton:hover {
     background-color: #1733c0;
