--- a/src/pages/pagination.module.scss
+++ b/src/pages/pagination.module.scss
@@ -1,10 +1,15 @@
+.pagination-container {
+  width: 100%;
+}
+
 .pagination {
     position: fixed;
     bottom: 0;
     left: 50%;
-    transform: translateX(-50%);
+    // transform: calc(translateX(var(--sb-width)) + translateX(-50%));
     z-index: 1;
     user-select: none;
+    transition: none;
   }
 
   .pagination a,
@@ -12,7 +17,6 @@
     margin: 0 8px;
     font-size: 16px;
     text-decoration: none;
-    /* color: #0d1117; */
   }
 
   .pagination .active {
@@ -21,7 +25,7 @@
     background-color: #f03a3a;
     border-radius: 4px;
     padding: 4px 8px;
-    transition-duration: 0.1s;
+    transition-duration: 0.5s;
   }
 
   .material-symbols-outlined {
