--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@
 :root {
   --sb-bg: #252525;
   --tb-bg: #252525;
-  --tb-height: 50px;
+  --tb-height: 5vh;
   --sb-width: 10vw;
   --rz-badge-padding: 0.125rem 0.25rem;
   --rz-badge-font-size: 0.75rem;
@@ -16,6 +16,8 @@
   --rz-badge-letter-spacing: 0.02rem;
   --rz-body-padding: 1rem;
   --transform: transform 0.2s ease-in-out;
+  --dgpadding: 2px 4px;
+  --logopadding: 5px;
 }
   html {
     font-family: sans-serif;
@@ -23,14 +25,13 @@
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
   }
-div {
-  display: flex;
-}
-  table,
-  .divTable {
-    border: 1px solid lightgray;
-    /* width: fit-content; */
-    max-height: calc(100% - var(--tb-height));
+
+  body {
+    /* max-width: 100vw;
+    max-height: 100vh;
+    height: 100vh;
+    width: 100vw; */
+    overflow: auto;
   }
 
   .tr {
@@ -108,12 +109,4 @@ div {
     width: 1em;
     height: 1em;
     overflow: hidden;
-  }
-
-  nav {
-    display: flex;
-    justify-content: flex-start;
-    width: 100%;
-    background-color: var(--bg-color);
-    left: 0.5vw;
   }
