--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,4 @@
-* {
-    box-sizing: border-box;
-    color: white;
-    margin: 0;
-    padding: 0;
-    border-width: 0;
-    border-style: solid;
-    -webkit-font-smoothing: antialiased;
-  }
+
 :root {
   --sb-bg: #252525;
   --tb-bg: #252525;
@@ -19,17 +11,32 @@
   --rz-badge-border-spacing: 4px;
   --rz-badge-letter-spacing: 0.02rem;
   --rz-body-padding: 1rem;
-  --transform: transform 0.2s ease-in-out;
+  --transform: transform 200ms ease-in-out;
   --dgpadding: 2px 4px;
   --logopadding: 5px;
+}
+
+* {
+  box-sizing: border-box;
+  color: white;
+  margin: 0;
+  padding: 0;
+  border-width: 0;
+  /* border-style: solid;
+  -webkit-font-smoothing: antialiased; */
+  transition: var(--transform);
 }
   html {
     font-family: sans-serif;
     font-size: 14px;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
+    height: 100vh;
   }
 
+  form {
+    display: block;
+  }
   body {
     /* max-width: 100vw;
     max-height: 100vh;
