--- a/src/pages/connectionDropdown.module.css
+++ b/src/pages/connectionDropdown.module.css
@@ -2,41 +2,40 @@
   position: relative;
   display: inline-block;
   padding-top: 10px;
-  z-index: 5;
+  z-index: 15;
 }
 
 .dropdown button {
   display: inline-flex;
   align-items: center;
-  background: var(--bg-color);
+  /* background: var(--bg-color); */
   border: 1px solid #ccc;
   padding: 0.5rem 1rem;
-  border-radius: 4px;
+  margin-right: 1rem;
+  /* border-radius: 4px; */
   cursor: pointer;
   font-size: 1rem;
   color: white;
   z-index: 5;
 }
-
+/*
 .dropdown button:after {
   content: '';
   display: inline-block;
   margin-left: 0.5rem;
   width: 0;
   height: 0;
-  border: 5px solid transparent;
   border-top-color: var(--bg-color);
   vertical-align: middle;
   z-index: 5;
-}
+} */
 
 .dropdown ul {
   position: absolute;
-  top: 100%;
+  /* top: 100%; */
   left: 0;
-  z-index: 5;
   display: none;
-  min-width: 10rem;
+  max-width: 15rem;
   padding: 0.5rem 0;
   margin: 0;
   background: var(--bg-color);
