--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -121,3 +121,15 @@
     height: 1em;
     overflow: hidden;
   }
+
+  [type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
+    cursor: pointer;
+  }
+
+  [type=button], [type=reset], [type=submit], button {
+    -webkit-appearance: button;
+    appearance: button;
+  }
+  button, select {
+    text-transform: none;
+  }
