--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -204,12 +204,18 @@
   padding-top: 10px;
 }
 
+.table-container {
+  position: relative;
+}
+
 .datagriddiv {
   font-family: sans-serif;
   font-size: 14px;
   color: white;
   height: 70vh;
   max-height: 70vh;
+  position: relative;
+  top: 50px;
 }
 
 .dataGridtbody {
@@ -675,11 +681,19 @@
 	display: none;
 }
 
-.dropdown {
+#gridjs_0 {
   position: relative;
+  z-index: 0;
+  margin-top: 100px;
+}
+
+.dropdown {
+  position: absolute;
   display: inline-block;
   // padding-top: 10px;
+  border-width: 1px;
   z-index: 15;
+  border-radius: 4px;
 }
 
 .dropdown button {
@@ -707,30 +721,17 @@
   z-index: 5;
 }
 
-.dropdown ul {
-  position: absolute;
-  /* top: 100%; */
-  left: 0;
-  display: none;
-  max-width: 15rem;
-  padding: 0.5rem 0;
-  margin: 0;
-  background: var(--bg-color);
-  border: 1px solid #ccc;
-  border-top: none;
-  border-radius: 0 0 4px 4px;
-  display: none;
-}
-
 .dropdown-item {
   list-style: none;
   cursor: pointer;
   font-size: 1rem;
   color: white;
+  background-color:rgb(65, 62, 62);
   z-index: 15;
   display: block;
   padding: 10px;
   margin-left: 10px;
+  border-radius: 4px;
 }
 .hovered {
   display: block;
