--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -12,24 +12,24 @@
 }
 
 .rz-body {
-  position: fixed;
-  padding: 0;
-  border-style: solid;
-  max-width: 90vw;
-  width: 90vw;
-  left: var(--sb-width);
-  top: var(--tb-height);
-  height: 95vh;
-  overflow: auto;
-  transition: var(--transform);
-  transition-duration: 0.3s;
+  position: fixed !important;;
+  padding: 0 !important;;
+  border-style: solid !important;;
+  max-width: 90vw !important;;
+  width: 90vw !important;
+  left: var(--sb-width) !important;
+  top: var(--tb-height) !important;
+  height: 95vh !important;
+  overflow: auto !important;
+  transition: var(--transform) !important;
+  transition-duration: 0.3s !important;
 }
 .rz-body.rz-body-collapsed {
-  max-width: 100%;
-  width: 100%;
-  left: 0;
-  transition: var(--transform);
-  transition-duration: 0.3s;
+  max-width: 100% !important;
+  width: 100% !important;
+  left: 0 !important;
+  transition: var(--transform) !important;
+  transition-duration: 0.3s !important;
 }
 
 #__next {
@@ -231,12 +231,8 @@
 .dataGridth {
   border-bottom: 1px solid lightgray;
   border-right: 1px solid lightgray;
-  padding: var(--dgpadding);
   white-space: nowrap;
-  min-width: 1px;
-  cursor: pointer;
-  user-select: none;
-  padding-right: 10px;
+  margin: auto; box-sizing: content-box; position: relative;
 }
 
 .dataGridtd {
@@ -255,7 +251,6 @@
 .columndivider {
   top: 0px;
   right: 0px;
-  width: 10px;
   position: relative;
   cursor: col-resize;
   -webkit-user-select: all;
@@ -274,7 +269,7 @@
   cursor: pointer;
 }
 .material-symbols-outlined {
-  float: right;
+  position: absolute; right: 10px; top: 50%; transform: translateY(-50%) translateX(40%); display: flex; cursor: pointer;
 }
 
 // .description {
