--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -192,6 +192,7 @@
   display: flex;
   justify-content: flex-end;
   width: 100%;
+  margin-bottom: 15px;
 }
 .container {
   max-width: calc(100vw - var(--sb-width) - 10);
@@ -208,7 +209,6 @@
   display: block;
   position: relative;
   margin-left: 40px;
-  padding: 0;
   padding-top: 10px;
 }
 
@@ -253,7 +253,6 @@
 .columndivider {
   top: 0px;
   right: 0px;
-  width: 50px;
   position: relative;
   cursor: col-resize;
   -webkit-user-select: all;
@@ -695,7 +694,11 @@
 }
 
 .dropdown {
+  position: absolute;
+  display: inline-block;
+  // padding-top: 10px;
   border-width: 1px;
+  z-index: 15;
   border-radius: 4px;
 }
 
@@ -801,4 +804,10 @@
   border-radius: var(--bs-btn-border-radius);
   background-color: var(--bs-btn-bg);
   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.topbar .dropdown {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
