--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -216,45 +216,21 @@
   position: relative;
 }
 
-.datagriddiv {
-  font-family: sans-serif;
-  font-size: 14px;
-  color: white;
-  height: 70vh;
-  max-height: 70vh;
-  position: relative;
-  top: 50px;
-}
-
-.dataGridtbody {
-  border-bottom: 1px solid lightgray;
-}
-
-.dataGridtd {
-  border-bottom: 1px solid lightgray;
-  border-right: 1px solid lightgray;
-  padding: var(--dgpadding);
-  white-space: nowrap;
-  overflow: hidden;
-  min-width: 1px;
-  box-sizing: border-box;
-}
-
 .dataGridtfoot {
   display: none;
 }
 
-.columndivider {
+.coldivider {
   top: 0px;
   right: 0px;
   position: relative;
   cursor: col-resize;
   -webkit-user-select: all;
   user-select: all;
-  z-index: 1000;
+  z-index: 99999999;
 }
 
-.columndivider:hover {
+.coldivider:hover {
   border-style: solid;
   border-color: #1931e4;
   cursor: col-resize;
@@ -550,6 +526,7 @@
 .button {
   margin-left:10px;
   margin-right:10px;
+  color: black;
 }
 
   .pagination a,
@@ -696,8 +673,8 @@
   padding: 0.5rem 1rem;
   margin-right: 1rem;
   cursor: pointer;
-  font-size: 1rem;
-  color: white;
+  font-size: 14px;
+  font-weight: 400;
   z-index: 5;
   border-style: solid;
   border-color: white;
@@ -809,23 +786,80 @@
   top: 0;
   right: 0;
 }
-.dataGridth {
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
-  white-space: nowrap;
-  margin: auto;
-  box-sizing: content-box;
+.datagriddiv {
+  font-family: sans-serif;
+  font-size: 14px;
+  color: white;
+  height: 70vh;
+  max-height: 70vh;
   position: relative;
-  text-align: left;
-  padding-right: 15px;
-  background-color: white;
-  color: black;
+  top: 50px;
 }
 
-.dataGridth:hover:before {
-  content: "";
-  top: 0;
-  height: 100%;
-  width: 4px;
-  background-color: blue;
+.dataGridtbody {
+  border-bottom: 1px solid lightgray;
+}
+
+.dataGridtd {
+  border-bottom: 1px solid lightgray;
+  border-right: 1px solid lightgray;
+  padding: var(--dgpadding);
+  white-space: nowrap;
+  // overflow: hidden;
+  min-width: 1px;
+  box-sizing: border-box;
+}
+
+// .dataGridth {
+//   border-bottom: 1px solid black;
+//   border-right: 1px solid black;
+//   white-space: nowrap;
+//   margin: auto;
+//   box-sizing: content-box;
+//   position: relative;
+//   text-align: left;
+//   padding-right: 15px;
+//   background-color: white;
+//   color: black;
+// }
+.divider:hover {
+  border-right: 10px solid red;
+  position: relative;
+  width: 10px;
+  z-index: 999999;
+  cursor: col-resize;
+}
+
+.dataGridth {
+  padding: 10px;
+  background-color: #eee;
+  color: black;
+}
+// .dataGridth.span {
+//   color: black;
+// }
+.dataGridth:hover {
+  background-color: #ccc;
+}
+// .span {
+//   color: black;
+// }
+
+.th {
+  padding: 2px 4px;
+  position: relative;
+  font-weight: bold;
+  text-align: center;
+  height: 30px;
+  text-align: left;
+}
+
+ .th, .td {
+  box-shadow: inset 0 0 0 1px lightgrey;
+  padding: 0.25rem;
+}
+
+.th:hover {
+  border-right: solid 5px blue;
+  cursor: col-resize;
 }
