--- a/src/styles/yardiInterface.module.scss
+++ b/src/styles/yardiInterface.module.scss
@@ -30,6 +30,8 @@
     cursor: pointer;
     white-space: nowrap;
     overflow: hidden;
+    color: black;
+    background: white;
     // box-sizing: content-box;
 }
 
